--- a/src/components/AddColor/index.module.css
+++ b/src/components/AddColor/index.module.css
@@ -21,4 +21,11 @@
 
 .picker {
   margin: 10px auto;
+  position: absolute;
+  bottom: 0;
+  left: 11%;
+}
+
+.pickerContainer {
+  position: relative;
 }
